# cython-hidapi

./: .gitignore  MANIFEST.in  hid.pyx  pyproject.toml  setup.py
cython/: chid.pxd  chid.pyx  chidraw.pxd  chidraw.pyx  hid_darwin.pxd  hid_darwin.pyx  hid_linux.pxd  hid_linux.pyx  hid_windows.pxd  hid_windows.pyx
hid/: __init__.py
hidraw/: __init__.py
